tests/paczka1/fuzzy1/54209225.err
Error in line 15: S726 A931 43,4
Error in line 8: FFWVAX03N A990 17,2
Error in line 23: RxgJ4U A931 20,0
